bugfix/removed scrollbar task-overlay

--- a/src/app/board/task/task.component.scss
+++ b/src/app/board/task/task.component.scss
@@ -28,6 +28,10 @@ section {
         padding: 40px;
         overflow: auto;
 
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
         @media (max-width: 490px) {
             width: 380px;
             padding: 20px;
